src/style.scss
$primary: steelblue;

body {
	background-color: lightcyan !important;
}

.main {
	margin: 3em;
  counter-reset: answerNumber;
}

.q-and-a {
	border: 3px solid $primary;
	border-radius: 16px;
	padding: 1.5em;
	margin-bottom: 2em;
}
.question-text {
	font-size: 1.4em;
}
.btn-primary {
  background-color: $primary !important;
  border-color: $primary !important;
}

.answer-form button {
	margin-top: 1em;
}



/* Multiple choice */
input[type='radio'] {
  visibility: hidden;
}

input[type='radio'] + label {
  padding: 0.2em 0.2em 0.2em 3em; 
  position: relative;
  cursor: pointer;
  margin-bottom: 1em;
  &::before {
    counter-increment: answerNumber;
    content: counter(answerNumber);
    text-align: center;
    color: $primary;
    position: absolute;
    height: 31px;
    width: 31px;
    top: 0;
    left: 0;
    background-color: #fff;
    border: 2px solid $primary;
    border-radius: 50%;
  }
}

input[type="radio"]:checked + label {
  &::before {
    line-height: 1.8em;
    color: #fff;
    background-color: $primary;
  }
}

/* Styles for react-rangeslider */

.slider .btn-primary {
  margin-top: 2em;
}
.rangeslider-horizontal .rangeslider__handle {
  border-radius: 5px !important;
  border-color: #fff !important;
  width: 20px !important;
  height: 30px !important;
  background-color: #fff !important;
  &::after {
    content: '' !important;
    height: 0 !important;
    width: 0;
  }
}

.rangeslider-horizontal .rangeslider__fill {
  background-color: $primary !important;
}

.rangeslider__label-item:first-of-type {
  padding-right: 4em;
  // white-space: nowrap;
}
.rangeslider__label-item:last-of-type {
  margin-left: 2em;
  white-space: nowrap;
}

footer {
  .copyright {
    font-size: 0.9em;
    text-align: right;
    position: absolute;
    right: 1em;
    bottom: 1em;
  }
}

@media (max-width: 800px) {
	.main {
		margin: 0.2em !important;
	}
  .question-text {
    font-size: 1.1em !important;
  }
}

